# cmake-leaning

./: CMakeLists.txt  README.md  main.cpp  main.h.in
include/: main.h
src/find-package/: CMakeLists.txt  index.cl
src/test/: CMakeLists.txt  test.cpp  test.h
